Aktualizacja Rejestracja poprawione 14.09.19

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,6 @@
     <title>Testowa strona główna</title>
 </head>
 <body>
-<h1>Witaj w Spring'u</h1>
+<h1>Witaj w Spring'u chuju</h1>
 </body>
 </html>
