--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,7 @@
     <title>Testowa strona główna</title>
 </head>
 <body>
-<h1>Witaj w Spring'u chuju</h1>
+<h1>Witaj w Spring'u chuju. Git cos nie dziala
+</h1>
 </body>
 </html>
