Aktualizacja Rejestracja end1/2 14.09.19

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,7 +5,7 @@
     <title>Testowa strona główna</title>
 </head>
 <body>
-<h1>Witaj w Spring'u chuju. Git cos nie dziala
+<h1>Witaj w Spring'u
 </h1>
 </body>
 </html>
